--- a/LarIdosos/src/main/resources/application.yaml
+++ b/LarIdosos/src/main/resources/application.yaml
@@ -2,6 +2,9 @@ spring:
   application:
     name: LarIdosos
 
+  main:
+    allow-bean-definition-overriding: true
+
   data:
     mongodb:
       host: ${SPRING_DATA_MONGODB_HOST:localhost}
@@ -13,9 +16,6 @@ spring:
         port: 5672
         username: guest
         password: guest
-
-
-
 jwt:
   key: ${JWT_KEY}
   access-token-expiration: 86400000      # 24 hours in milliseconds
