Adicionando cadastro de Idoso, Responsavel, Medico

--- a/geri-plus/nginx.conf
+++ b/geri-plus/nginx.conf
@@ -24,6 +24,7 @@ server {
 
     location /api/ {
 
+        client_max_body_size 50M;
         # O 'proxy_pass' deve usar o nome do serviço do docker-compose: 'laridosos-service'
 
         proxy_pass http://laridosos-service:8080;
