--- a/geri-plus/angular.json
+++ b/geri-plus/angular.json
@@ -27,7 +27,11 @@
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
               "src/styles.scss"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
+            "scripts": [
+              //"node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+             // "node_modules/bootstrap-multiselect/dist/js/bootstrap-multiselect.js"
+            ]
           },
           "configurations": {
             "production": {
