--- a/geri-plus/angular.json
+++ b/geri-plus/angular.json
@@ -28,9 +28,9 @@
               "src/styles.scss"
             ],
             "scripts": [
-              //"node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-             // "node_modules/bootstrap-multiselect/dist/js/bootstrap-multiselect.js"
+
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+      
             ]
           },
           "configurations": {
